--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,18 +14,21 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
       - name: Set up JDK 16
         uses: actions/setup-java@v2
         with:
           java-version: '16'
           distribution: 'adopt'
-      - name: Accept EULA
-        uses: finnp/create-file-action@master
+
+      - uses: finnp/create-file-action@master
         env:
           FILE_NAME: "eula.txt"
           FILE_DATA: "eula=true"
+
       - name: Run 1.17 generators
         run: gradle generateData_1.17
+        
       - name: Push data to data repository.
         uses: cpina/github-action-push-to-another-repository@main
         env:
