--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,8 +9,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
-      packages: write
+      contents: write
 
     steps:
       - uses: actions/checkout@v2
@@ -22,7 +21,7 @@ jobs:
           distribution: 'adopt'
 
       - name: Create EULA file
-        run: echo 'eula.txt' > /home/runner/work/MinestomDataGenerator/MinestomDataGenerator/eula.txt
+        run: echo 'eula=true' > /home/runner/work/MinestomDataGenerator/MinestomDataGenerator/eula.txt
 
       - name: Run 1.17 generators
         run: gradle generateData_1.17
