--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,11 +20,8 @@ jobs:
           java-version: '16'
           distribution: 'adopt'
 
-      - name: Create EULA file
-        run: echo 'eula=true' > /home/runner/work/MinestomDataGenerator/MinestomDataGenerator/eula.txt
-
       - name: Run 1.17 generators
-        run: gradle generateData_1.17
+        run: gradle generateData_1.17 -Peula=true
 
       - name: Push data to data repository.
         uses: cpina/github-action-push-to-another-repository@main
