--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,4 +1,4 @@
 jdk:
   - openjdk16
 install:
-  -  chmod +x gradlew && ./gradlew publish -Peula=true
+  -  chmod +x gradlew && ./gradlew publishToMavenLocal -Peula=true
