--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,4 +1,5 @@
-jdk:
-  - openjdk16
+before_install:
+  - sdk install java 16.0.1-open
+  - sdk use java 16.0.1-open
 install:
   -  chmod +x gradlew && ./gradlew publishToMavenLocal -Peula=true
