--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,4 +1,6 @@
 before_install:
+  - source "$HOME/.sdkman/bin/sdkman-init.sh"
+  - sdk update
   - sdk install java 16.0.1-open
   - sdk use java 16.0.1-open
 install:
