--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ logback = "1.4.5"
 
 vanilla-gradle = "0.2.1-SNAPSHOT"
 blossom = "2.1.0"
-nexuspublish = "1.3.0"
+nmcp = "1.0.0-rc.1"
 
 [libraries]
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
@@ -24,4 +24,4 @@ logging = ["slf4j-api", "logback-core", "logback-classic"]
 [plugins]
 vanilla-gradle = { id = "org.spongepowered.gradle.vanilla", version.ref = "vanilla-gradle" }
 blossom = { id = "net.kyori.blossom", version.ref = "blossom" }
-nexuspublish = { id = "io.github.gradle-nexus.publish-plugin", version.ref = "nexuspublish" }
+nmcp = { id = "com.gradleup.nmcp.aggregation", version.ref = "nmcp" }
