--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,12 +2,12 @@ metadata.format.version = "1.1"
 
 [versions]
 gson = "2.13.2"
-minecraft = "1.21.11"
+minecraft = "26.1-snapshot-1"
 
 slf4j-api = "2.0.17"
 logback = "1.5.22"
 
-vanilla-gradle = "0.2.2-SNAPSHOT"
+vanilla-gradle = "0.3.0"
 nmcp = "1.3.0"
 
 [libraries]
